RESOLVED FIXED 242766
Crash under getNetworkProcessConnection()
https://bugs.webkit.org/show_bug.cgi?id=242766
Summary Crash under getNetworkProcessConnection()
Chris Dumez
Reported 2022-07-14 14:08:03 PDT
Crash under getNetworkProcessConnection().
Attachments
Chris Dumez
Comment 1 2022-07-14 14:08:09 PDT
<radar:92432654>
Chris Dumez
Comment 2 2022-07-14 14:08:32 PDT
Chris Dumez
Comment 3 2022-07-14 14:14:53 PDT
EWS
Comment 4 2022-07-15 14:06:21 PDT
Committed 252520@main (d8327a389be8): <https://commits.webkit.org/252520@main> Reviewed commits have been landed. Closing PR #2424 and removing active labels.
Note You need to log in before you can comment on or make changes to this bug.