Cherry-pick d8327a389be8. rdar://problem/92432654

Crash under getNetworkProcessConnection()
    https://bugs.webkit.org/show_bug.cgi?id=242766
    <rdar://92432654>

    Reviewed by Geoffrey Garen.

    We see quite a few crashes under getNetworkProcessConnection() in the wild so
    I am making the following changes to try and mitigate this:
    1. Retry more times to establish the network process connection (for up the
       3 seconds instead of 1)
    2. requestConnection() would keep checking if the connection is still valid,
       in case the reason the connection establishment failed because the UIProcess
       severed the connection. However, because getNetworkProcessConnection() hangs
       the main thread and because Connection::m_isValid was only getting updated
       on the main thread, it wouldn't actually be possible for isValid() to start
       returning false, even if the IPC connection was severed. To address this
       issue, we now update m_isValid on a background thread, as soon as the
       IPC connection closes.

    * Source/WebKit/Platform/IPC/Connection.cpp:
    (IPC::Connection::invalidate):
    (IPC::Connection::connectionDidClose):
    * Source/WebKit/Platform/IPC/Connection.h:
    * Source/WebKit/WebProcess/WebProcess.cpp:
    (WebKit::getNetworkProcessConnection):

    Canonical link: https://commits.webkit.org/252520@main

Canonical link: https://commits.webkit.org/252432.55@safari-7614-branch